--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-scikit-learn===1.7.2
-matplotlib===3.10.6
-pandas===2.3.2
-pytest===8.4.2
+certifi==2025.8.3
+cffi==2.0.0
+cryptography==46.0.1
+numpy==2.3.3
+pycparser==2.23
+pygit2==1.18.2
+wheel==0.45.1
+mlflow
